[TOOLS-4562] Display issues in the Migration Wizard http://jira.cubrid.org/browse/TOOLS-4562
- changed design(decription, scroll bar and etc.) in the migration wizard

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -49,15 +49,15 @@ btnDefaultExpression=\uD45C\uD604\uC2DD
 btnDefaultURL=\uAE30\uBCF8\uAC12
 btnDelete=\uC0AD\uC81C(&D)
 btnDestCSVFiles=\uB85C\uCEEC CSV \uD30C\uC77C
-btnDestCSVFilesDes=\uC6D0\uBCF8 \uC628\uB77C\uC778 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uBC0F mysqldump XML \uD30C\uC77C\uC5D0\uC11C \uBC1B\uC740 \uB370\uC774\uD130\uB9CC\uC744 CSV \uD30C\uC77C\uB85C \uCD9C\uB825\uD569\uB2C8\uB2E4.
+btnDestCSVFilesDes=\uc6d0\ubcf8 \uc628\ub77c\uc778 \ub370\uc774\ud130\ubca0\uc774\uc2a4 \ub610\ub294 mysqldump XML \ud30c\uc77c\uc5d0\uc11c \ubc1b\uc740 \ub370\uc774\ud130\ub9cc\uc744 CSV \ud30c\uc77c\ub85c \ucd9c\ub825\ud569\ub2c8\ub2e4.
 btnDestLocalDump=\uB85C\uCEEC CUBRID dump \uD30C\uC77C
-btnDestLocalDumpDes=\uC6D0\uBCF8 \uC628\uB77C\uC778 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uBC0F mysqldump XML \uD30C\uC77C\uC5D0\uC11C \uBC1B\uC740 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C loaddb \uD30C\uC77C\uB85C \uBCC0\uD658\uD569\uB2C8\uB2E4. "cubrid loaddb" \uC720\uD2F8\uB9AC\uD2F0\uB85C \uACE0\uC18D \uB9C8\uC774\uADF8\uB808\uC774\uC158\uC744 \uC704\uD574 \uC0AC\uC6A9\uD569\uB2C8\uB2E4.
+btnDestLocalDumpDes=\uc6d0\ubcf8 \uc628\ub77c\uc778 \ub370\uc774\ud130\ubca0\uc774\uc2a4 \ub610\ub294 mysqldump XML \ud30c\uc77c\uc5d0\uc11c \ubc1b\uc740\n\uc2a4\ud0a4\ub9c8 \ubc0f \ub370\uc774\ud130\ub97c loaddb \ud30c\uc77c\ub85c \ubcc0\ud658\ud569\ub2c8\ub2e4.\n"cubrid loaddb" \uc720\ud2f8\ub9ac\ud2f0\ub85c \uace0\uc18d \ub9c8\uc774\uadf8\ub808\uc774\uc158\uc744 \uc704\ud574 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 btnDestOnlineCUBRIDDB=\uC628\uB77C\uC778 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4
-btnDestOnlineCUBRIDDBDes=JDBC \uC5F0\uACB0\uB85C CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC5D0 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uC785\uB825\uD569\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uB300\uC0C1 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
+btnDestOnlineCUBRIDDBDes=JDBC \uC5F0\uACB0\uB85C CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC5D0 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uC785\uB825\uD569\uB2C8\uB2E4.\n\uB124\uD2B8\uC6CC\uD06C \uBC0F \uB300\uC0C1 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
 btnDestSQLFiles=\uB85C\uCEEC SQL \uC2A4\uD06C\uB9BD\uD2B8 \uD30C\uC77C
-btnDestSQLFilesDes=\uC6D0\uBCF8 \uC628\uB77C\uC778 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uBC0F mysqldump XML \uD30C\uC77C\uC5D0\uC11C \uBC1B\uC740 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C DDL \uBC0F DML(INSERT INTO \uAD6C\uBB38) \uD30C\uC77C\uB85C \uCD9C\uB825\uD569\uB2C8\uB2E4.
+btnDestSQLFilesDes=\uc6d0\ubcf8 \uc628\ub77c\uc778 \ub370\uc774\ud130\ubca0\uc774\uc2a4 \ub610\ub294 mysqldump XML \ud30c\uc77c\uc5d0\uc11c \ubc1b\uc740\n\uc2a4\ud0a4\ub9c8 \ubc0f \ub370\uc774\ud130\ub97c DDL \ubc0f DML(INSERT INTO \uad6c\ubb38) \ud30c\uc77c\ub85c \ucd9c\ub825\ud569\ub2c8\ub2e4.
 btnDestXLSFiles=\uB85C\uCEEC XLS \uD30C\uC77C
-btnDestXLSFilesDes=\uC6D0\uBCF8 \uC628\uB77C\uC778 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uBC0F mysqldump XML \uD30C\uC77C\uC5D0\uC11C \uBC1B\uC740 \uB370\uC774\uD130\uB9CC\uC744 XLS \uD30C\uC77C\uB85C \uCD9C\uB825\uD569\uB2C8\uB2E4.
+btnDestXLSFilesDes=\uc6d0\ubcf8 \uc628\ub77c\uc778 \ub370\uc774\ud130\ubca0\uc774\uc2a4 \ub610\ub294 mysqldump XML \ud30c\uc77c\uc5d0\uc11c \ubc1b\uc740\n\ub370\uc774\ud130\ub9cc\uc744 XLS \ud30c\uc77c\ub85c \ucd9c\ub825\ud569\ub2c8\ub2e4.
 btnDown=\uC544\uB798\uB85C
 btnDownload=&Update CUBRID Drivers
 btnEdit=\uD3B8\uC9D1...
@@ -99,23 +99,23 @@ btnShowMessages=\uBA54\uC2DC\uC9C0 \uBCF4\uC774\uAE30
 btnShowWindowAgain=\uB2E4\uC74C \uC2DC\uC791\uD560 \uB54C \uC774 \uCC3D\uC744 \uD45C\uC2DC\uD558\uC9C0 \uC54A\uC74C
 btnSingleThreadImporting=\uC785\uB825\uD560 \uD30C\uC77C\uBCC4 \uB3D9\uC2DC \uC785\uB825 \uD5C8\uC6A9\uD558\uC9C0 \uC54A\uC74C
 btnSrcCSVFiles=\uB85C\uCEEC CSV \uD30C\uC77C
-btnSrcCSVFilesDes=\uC774\uBBF8 \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8\uAC00 \uB300\uC0C1\uC758 \uC628\uB77C\uC778 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC5D0 \uB9C8\uC774\uADF8\uB808\uC774\uC158\uB41C \uACBD\uC6B0 \uB370\uC774\uD130\uB9CC \uC785\uB825\uD558\uAE30 \uC704\uD574 CSV \uD30C\uC77C\uC744 \uC0AC\uC6A9\uD569\uB2C8\uB2E4.
+btnSrcCSVFilesDes=\uC774\uBBF8 \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8\uAC00 \uB300\uC0C1\uC758 \uC628\uB77C\uC778 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC5D0 \uB9C8\uC774\uADF8\uB808\uC774\uC158\uB41C \uACBD\uC6B0\n\uB370\uC774\uD130\uB9CC \uC785\uB825\uD558\uAE30 \uC704\uD574 CSV \uD30C\uC77C\uC744 \uC0AC\uC6A9\uD569\uB2C8\uB2E4.
 btnSrcMySQLDumpDB=\uB85C\uCEEC MYSQL XML dump \uD30C\uC77C
 btnSrcMySQLDumpDBDes="mysqldump --xml"\uB85C \uB0B4\uB824 \uBC1B\uC740 XML \uD30C\uC77C\uC744 \uC774\uC6A9\uD574\uC11C \uBE60\uB974\uAC8C \uB9C8\uC774\uADF8\uB808\uC774\uC158 \uD569\uB2C8\uB2E4.
 btnSrcOnlineCUBRIDDB=\uC628\uB77C\uC778 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4
-btnSrcOnlineCUBRIDDBDes=JDBC \uC5F0\uACB0\uB85C CUBRID \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
+btnSrcOnlineCUBRIDDBDes=JDBC \uC5F0\uACB0\uB85C CUBRID \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4.\n\uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
 btnSrcOnlineInformixDB=\uC628\uB77C\uC778 Informix \uB370\uC774\uD130\uBCA0\uC774\uC2A4
-btnSrcOnlineInformixDBDes=JDBC \uC5F0\uACB0\uB85C Informix \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
+btnSrcOnlineInformixDBDes=JDBC \uC5F0\uACB0\uB85C Informix \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4.\n\uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
 btnSrcOnlineMariaDBDB=\uC628\uB77C\uC778 MariaDB \uB370\uC774\uD130\uBCA0\uC774\uC2A4
-btnSrcOnlineMariaDBDBDes=JDBC \uC5F0\uACB0\uB85C MariaDB \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
+btnSrcOnlineMariaDBDBDes=JDBC \uC5F0\uACB0\uB85C MariaDB \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4.\n\uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
 btnSrcOnlineMSSQLDB=\uC628\uB77C\uC778 MSSQL \uB370\uC774\uD130\uBCA0\uC774\uC2A4
-btnSrcOnlineMSSQLDBDes=JDBC \uC5F0\uACB0\uB85C MSSQL \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
+btnSrcOnlineMSSQLDBDes=JDBC \uC5F0\uACB0\uB85C MSSQL \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4.\n\uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
 btnSrcOnlineMySQLDB=\uC628\uB77C\uC778 MySQL \uB370\uC774\uD130\uBCA0\uC774\uC2A4
-btnSrcOnlineMySQLDBDes=JDBC \uC5F0\uACB0\uB85C MySQL \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
+btnSrcOnlineMySQLDBDes=JDBC \uC5F0\uACB0\uB85C MySQL \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4.\n\uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
 btnSrcOnlineOracleDB=\uC628\uB77C\uC778 Oracle \uB370\uC774\uD130\uBCA0\uC774\uC2A4
-btnSrcOnlineOracleDBDes=JDBC \uC5F0\uACB0\uB85C Oracle \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
+btnSrcOnlineOracleDBDes=JDBC \uC5F0\uACB0\uB85C Oracle \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4.\n\uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
 btnSrcSQLFiles=\uB85C\uCEEC SQL \uC2A4\uD06C\uB9BD\uD2B8 \uD30C\uC77C
-btnSrcSQLFilesDes=DDL \uBC0F DML(INSERT INTO \uAD6C\uBB38)\uC774 \uD3EC\uD568\uB41C SQL \uD30C\uC77C\uC744 \uC2E4\uD589\uD574\uC11C \uB300\uC0C1\uC758 \uC628\uB77C\uC778 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC5D0 \uC785\uB825\uD569\uB2C8\uB2E4.
+btnSrcSQLFilesDes=DDL \ubc0f DML(INSERT INTO \uad6c\ubb38)\uc774 \ud3ec\ud568\ub41c SQL \ud30c\uc77c\uc744 \uC2E4\uD589\uD558\uC5EC \uC785\uB825\uD569\uB2C8\uB2E4.\n\uB2E8, \uB300\uC0C1\uC720\uD615\uC774 \uC628\uB77C\uC778 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC778 \uACBD\uC6B0\uC5D0\uB9CC \uAC00\uB2A5\uD569\uB2C8\uB2E4.
 btnStartMigrationByHistory=\uB9C8\uC774\uADF8\uB808\uC774\uC158 \uC7AC\uC2E4\uD589...
 btnStartMigrationBySelectedHistory=\uB9C8\uC774\uADF8\uB808\uC774\uC158 \uC7AC\uC2E4\uD589...
 btnStartNow=\uBC14\uB85C \uC2DC\uC791\uD558\uAE30
@@ -277,8 +277,8 @@ errMsgEmptyFileName=\uD30C\uC77C \uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC1
 errMsgEmptyHost=\uD638\uC2A4\uD2B8\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 errMsgEmptyPublicKey=Public Key\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 errMsgEmptyUser=\uC0AC\uC6A9\uC790\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
-errMsgErrorDestinationType1=SQL \uD30C\uC77C\uC740 \uC6D0\uBCF8\uC774 \uC628\uB77C\uC778 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uBC0F mysqldump XML \uD30C\uC77C\uC77C \uACBD\uC6B0\uC5D0\uB9CC \uC0AC\uC6A9\uD560 \uC218 \uC788\uC2B5\uB2C8\uB2E4.
-errMsgErrorDestinationType2=CSV \uD30C\uC77C\uC740 \uC6D0\uBCF8\uC774 \uC628\uB77C\uC778 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uBC0F mysqldump XML \uD30C\uC77C\uC77C \uACBD\uC6B0\uC5D0\uB9CC \uC0AC\uC6A9\uD560 \uC218 \uC788\uC2B5\uB2C8\uB2E4.
+errMsgErrorDestinationType1=SQL \ud30c\uc77c\uc740 \uc6d0\ubcf8\uc774 \uc628\ub77c\uc778 CUBRID \ub370\uc774\ud130\ubca0\uc774\uc2a4 \ub610\ub294 mysqldump XML \ud30c\uc77c\uc77c \uacbd\uc6b0\uc5d0\ub9cc \uc0ac\uc6a9\ud560 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
+errMsgErrorDestinationType2=CSV \ud30c\uc77c\uc740 \uc6d0\ubcf8\uc774 \uc628\ub77c\uc778 CUBRID \ub370\uc774\ud130\ubca0\uc774\uc2a4 \ub610\ub294 mysqldump XML \ud30c\uc77c\uc77c \uacbd\uc6b0\uc5d0\ub9cc \uc0ac\uc6a9\ud560 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
 errMsgExportLocalFailed=\uB0B4 PC\uB85C \uC2A4\uD06C\uB9BD\uD2B8 \uB0B4\uBCF4\uB0B4\uAE30\uB97C \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 errMsgExportRemoteFailed=\uC6D0\uACA9 \uC11C\uBC84\uB85C \uC2A4\uD06C\uB9BD\uD2B8 \uB0B4\uBCF4\uB0B4\uAE30\uB97C \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 errMsgImportLocalScriptFailed=\uB0B4 PC\uB85C\uBD80\uD130 \uC2A4\uD06C\uB9BD\uD2B8 \uAC00\uC838\uC624\uAE30\uB97C \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
@@ -525,7 +525,7 @@ msgErrEmptyMin=\uCD5C\uC18C\uAC12\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 msgErrEmptyPartition=[\uD14C\uC774\uBE14\:"{0}"]\uD14C\uC774\uBE14 \uD30C\uD2F0\uC158 DDL\uC774 \uBE44\uC5B4\uC788\uC2B5\uB2C8\uB2E4.
 msgErrEmptyRefTable=[\uD14C\uC774\uBE14\:"{0}"]\uCC38\uC870 \uD14C\uC774\uBE14 \uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694 "{1}".
 msgErrEmptySchemaCheckbox=\uD558\uB098 \uC774\uC0C1\uC758 \uC2A4\uD0A4\uB9C8\uB97C \uC120\uD0DD\uD558\uC138\uC694.
-msgErrEmptySchemaName=\ub300\uc0c1 \uc2a4\ud0a4\ub9c8 \uc774\ub984\uc740 \ubc18\ub4dc\uc2dc \uc788\uc5b4\uc57c \ud569\ub2c8\ub2e4\u002e
+msgErrEmptySchemaName=\ub300\uc0c1 \uc2a4\ud0a4\ub9c8 \uc774\ub984\uc740 \ubc18\ub4dc\uc2dc \uc788\uc5b4\uc57c \ud569\ub2c8\ub2e4.
 msgErrEmptyScriptName=\uB9C8\uC774\uADF8\uB808\uC774\uC158 \uC2A4\uD06C\uB9BD\uD2B8 \uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 msgErrEmptySeparator=\uAD6C\uBD84\uC790\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 msgErrEmptyStartValue=\uC2DC\uC791 \uAC12\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
@@ -723,7 +723,7 @@ targetDBPageOfflineTargetFileRepositoryErrMsg=\uD30C\uC77C\uB85C \uC800\uC7A5\uD
 targetDBVersion=CUBRID \uBC84\uC804\:
 targetPKColumns=\uB300\uC0C1 PK \uCEEC\uB7FC
 targetSchema=\ub300\uc0c1 \uc2a4\ud0a4\ub9c8
-targetSchemaDes=\uc774\uad00\ub420 \ub300\uc0c1 \u0044\u0042\uc758 \uc2a4\ud0a4\ub9c8 \uc774\ub984\uc785\ub2c8\ub2e4\u002e
+targetSchemaDes=\uc774\uad00\ub420 \ub300\uc0c1 DB\uc758 \uc2a4\ud0a4\ub9c8 \uc774\ub984\uc785\ub2c8\ub2e4.
 tblColSourceColumn=\uC6D0\uBCF8 \uCEEC\uB7FC
 tblColSourceTable=\uC6D0\uBCF8 \uD14C\uC774\uBE14
 tblColTargetColumn=\uB300\uC0C1 \uCEEC\uB7FC
