[TOOLS-4564] Improve ‘Refresh’ name in online wizard 2 of 5 step. http://jira.cubrid.org/browse/TOOLS-4564
- Change the label name for wizard ('refresh' -> 'Update database object')

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -658,8 +658,9 @@ otherSettings=Other Settings
 prefTitleGeneral=General
 productName=CUBRID Migration Toolkit
 progressMetadata=Getting database meta data...
-refreshButtonLabel=Re&fresh
-refreshDBConnActionMessage=Refresh database will retrieve database object and clear the wizard data,are you sure?
+refreshButtonLabel=Update Database Object
+refreshButtonDescription=Update Database Object will retrieve selected database object and clear the wizard data.
+refreshDBConnActionMessage=Update Database Object will retrieve selected database object and clear the wizard data,are you sure?
 removeButtonLabel=&Remove
 schemaMappingPageTitle=Schema Mapping Page
 schemaMappingPageDescription=Mapping the schema
