--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -653,8 +653,9 @@ otherSettings=\uAE30\uD0C0 \uC124\uC815
 prefTitleGeneral=\uC77C\uBC18 \uC815\uBCF4
 productName=CUBRID \uB9C8\uC774\uADF8\uB808\uC774\uC158 \uD234\uD0B7
 progressMetadata=\uC9C4\uD589\uC911\uC778 \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC758 \uBA54\uD0C0 \uB370\uC774\uD130 \uBC1B\uAE30...
-refreshButtonLabel=\uC0C8\uB85C\uACE0\uCE68(&F)
-refreshDBConnActionMessage=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC0C8\uB85C\uACE0\uCE68\uC740 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uAC1D\uCCB4\uB97C \uB2E4\uC2DC \uB85C\uB4DC\uD558\uACE0 \uB9C8\uBC95\uC0AC\uC758 \uC124\uC815\uC740 \uCD08\uAE30\uD654\uB429\uB2C8\uB2E4. \uACC4\uC18D\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+refreshButtonLabel=\uAC1D\uCCB4 \uC815\uBCF4\uAC31\uC2E0
+refreshButtonDescription=\uAC1D\uCCB4 \uC815\uBCF4\uAC31\uC2E0\uC740 \uC120\uD0DD\uB41C \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC758 \uB9C8\uBC95\uC0AC\uC758 \uC124\uC815\uC744 \uCD08\uAE30\uD654\uD558\uACE0 \uAC1D\uCCB4 \uC815\uBCF4\uB97C \uB2E4\uC2DC \uAC31\uC2E0\uD569\uB2C8\uB2E4.
+refreshDBConnActionMessage=\uAC1D\uCCB4 \uC815\uBCF4\uAC31\uC2E0\uC740 \uC120\uD0DD\uB41C \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC758 \uB9C8\uBC95\uC0AC\uC758 \uC124\uC815\uC744 \uCD08\uAE30\uD654\uD558\uACE0 \uAC1D\uCCB4 \uC815\uBCF4\uB97C \uB2E4\uC2DC \uAC31\uC2E0\uD569\uB2C8\uB2E4.  \uACC4\uC18D\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 removeButtonLabel=\uC0AD\uC81C
 schemaMappingPageTitle=4 / 6 \uc2a4\ud0a4\ub9c8 \ub9f5\ud551
 schemaMappingPageDescription=\uB300\uC0C1 \uC2A4\uD0A4\uB9C8\uB97C \uC120\uD0DD\uD558\uAC70\uB098 \uBCC0\uACBD\uD574 \uC8FC\uC138\uC694
