--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
@@ -604,8 +604,9 @@ otherSettings=\u5176\u4ED6\u8BBE\u7F6E
 prefTitleGeneral=\u5E38\u89C4
 productName=CUBRID Migration Toolkit
 progressMetadata=\u83B7\u53D6\u6570\u636E\u5E93\u5143\u6570\u636E\u4E2D...
-refreshButtonLabel=\u5237\u65B0(&F)
-refreshDBConnActionMessage=\u5237\u65B0\u6570\u636E\u5E93\u5C06\u4F1A\u91CD\u65B0\u83B7\u53D6\u6570\u636E\u5E93\u5BF9\u8C61\u5E76\u6E05\u9664\u5411\u5BFC\u6570\u636E\uFF0C\u786E\u5B9A\u5417?
+refreshButtonLabel=\u66F4\u65B0\u6570\u636E\u5E93\u5BF9\u8C61
+refreshButtonDescription=\u66F4\u65B0\u6570\u636E\u5E93\u5BF9\u8C61\u5C06\u68C0\u7D22\u6570\u636E\u5E93\u5BF9\u8C61\u5E76\u6E05\u9664\u5411\u5BFC\u6570\u636E\u3002
+refreshDBConnActionMessage=\u66F4\u65B0\u6570\u636E\u5E93\u5BF9\u8C61\u5C06\u68C0\u7D22\u6570\u636E\u5E93\u5BF9\u8C61\u5E76\u6E05\u9664\u5411\u5BFC\u6570\u636E\uFF0C\u60A8\u786E\u5B9A\u5417\uFF1F
 removeButtonLabel=\u79FB\u9664(&R)
 schemaMappingPageTitle=\u67B6\u69CB\u6620\u5C04\u9801\u9762
 schemaMappingPageDescription=\u6620\u5C04\u6A21\u5F0F
