add connection user name

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -672,6 +672,7 @@ sourceDBPageErrNoSetXMLFileCharset=Please select a charset of MySQL XML dump fil
 sourceDBPageTableCharset=Charset
 sourceDBPageTableConnNm=Connection name
 sourceDBPageTableDbNm=Database name
+sourceDBPageTableUserNm=User name
 sourceDBPageTableDbType=Database type
 sourceDBPageTableIP=Host IP
 sourceDBPageTablePort=Host port
