--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -667,6 +667,7 @@ sourceDBPageErrNoSetXMLFileCharset=xml \uD30C\uC77C\uC758 \uBB38\uC790\uC9D1\uD5
 sourceDBPageTableCharset=\uBB38\uC790 \uC9D1\uD569
 sourceDBPageTableConnNm=\uC5F0\uACB0 \uC774\uB984
 sourceDBPageTableDbNm=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC774\uB984
+sourceDBPageTableUserNm=\uC0AC\uC6A9\uC790 \uC774\uB984
 sourceDBPageTableDbType=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC720\uD615
 sourceDBPageTableIP=\uD638\uC2A4\uD2B8 \uC8FC\uC18C
 sourceDBPageTablePort=\uD638\uC2A4\uD2B8 \uD3EC\uD2B8
