--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -190,6 +190,7 @@ commonToolMysqlMsg4=Connection timed out, please check the input parameters\!
 commonToolMysqlMsg5=Failed to connect to database server\!
 confirmCharset=Charset \:
 confirmDatabaseName=Database name \:
+confirmDatabaseType=Database type \:
 confirmFile=File \:
 confirmFileRepository=File Repository
 confirmHostIP=Host IP \:
@@ -223,6 +224,8 @@ confrimSerial=Serial \:
 confrimSynonym=Synonym \:
 confrimUpdateStatistic=UpdateStatistic \: 
 cubridNewInfoEditorName=CUBRID Information
+cubrid112Higher=CUBRID 11.2 Higher
+cubrid110Lower=CUBRID 11.0 Lower
 dBConnectCompositeBtnBrowse=Bro&wse...
 dBConnectCompositeErrDbSys=Database system type is not valid\!
 dBConnectCompositeErrDriver=Database driver name is not valid\!
