--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -189,6 +189,8 @@ commonToolMysqlMsg3=Can not connect to server, please check whether the database
 commonToolMysqlMsg4=Connection timed out, please check the input parameters\!
 commonToolMysqlMsg5=Failed to connect to database server\!
 confirmCharset=Charset \:
+confirmCubrid112Higher=CUBRID 11.2 or Higher
+confirmCubrid110Lower=CUBRID 11.0 or Lower
 confirmDatabaseName=Database name \:
 confirmDatabaseType=Database type \:
 confirmFile=File \:
@@ -224,8 +226,6 @@ confrimSerial=Serial \:
 confrimSynonym=Synonym \:
 confrimUpdateStatistic=UpdateStatistic \: 
 cubridNewInfoEditorName=CUBRID Information
-cubrid112Higher=CUBRID 11.2 Higher
-cubrid110Lower=CUBRID 11.0 Lower
 dBConnectCompositeBtnBrowse=Bro&wse...
 dBConnectCompositeErrDbSys=Database system type is not valid\!
 dBConnectCompositeErrDriver=Database driver name is not valid\!
