add korean message properties

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -188,7 +188,10 @@ commonToolMysqlMsg3=\uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC5D0 \uC5F0\uACB0\uD56
 commonToolMysqlMsg4=\uC5F0\uACB0 \uC2DC\uAC04\uC774 \uCD08\uACFC\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uC785\uB825 \uC815\uBCF4\uB97C \uD655\uC778\uD558\uC2ED\uC2DC\uC624.
 commonToolMysqlMsg5=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC5F0\uACB0\uC774 \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 confirmCharset=\uBB38\uC790\uC9D1\uD569 \:
+confirmCubrid112Higher=CUBRID 11.2 \uC774\uC0C1
+confirmCubrid110Lower=CUBRID 11.0 \uC774\uD558
 confirmDatabaseName=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC774\uB984 \:
+confirmDatabaseType=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uD0C0\uC785 \:
 confirmFile=\uD30C\uC77C \:
 confirmFileRepository=\uD30C\uC77C \uCD9C\uB825
 confirmHostIP=\uD638\uC2A4\uD2B8 \uC8FC\uC18C \:
