--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -392,6 +392,7 @@ lblIncrement=\uC99D\uBD84\uAC12\:
 lblIncrementValue=\uC99D\uAC00 \uAC12\:
 lblIndexName=\uC778\uB371\uC2A4 \uC774\uB984\:
 lblIndexQuickSetting=\uBAA8\uB4E0 \uC778\uB371\uC2A4 \uBCF4\uAE30...
+lblJdbcDriverDir=JDBC \uB4DC\uB77C\uC774\uBC84 \uC704\uCE58\:
 lblKrbConfFile=\uCEE4\uBC84\uB85C\uC2A4 \uC124\uC815 \uD30C\uC77C\:
 lblLog=\uB85C\uADF8
 lblLogVolPath=\uB85C\uADF8 \uBCFC\uB968 \uACBD\uB85C\:
