--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -392,7 +392,6 @@ lblIncrement=\uC99D\uBD84\uAC12\:
 lblIncrementValue=\uC99D\uAC00 \uAC12\:
 lblIndexName=\uC778\uB371\uC2A4 \uC774\uB984\:
 lblIndexQuickSetting=\uBAA8\uB4E0 \uC778\uB371\uC2A4 \uBCF4\uAE30...
-lblJdbcDriverDir=JDBC \uB4DC\uB77C\uC774\uBC84 \uC704\uCE58\:
 lblKrbConfFile=\uCEE4\uBC84\uB85C\uC2A4 \uC124\uC815 \uD30C\uC77C\:
 lblLog=\uB85C\uADF8
 lblLogVolPath=\uB85C\uADF8 \uBCFC\uB968 \uACBD\uB85C\:
@@ -426,6 +425,7 @@ lblSerialName=\uC2DC\uB9AC\uC5BC \uC774\uB984\:
 lblShared=Shared\:
 lblSource=\uC6D0\uBCF8
 lblSourceDBPart=\uC6D0\uBCF8 DB \uAC1D\uCCB4
+lblSourceJdbcDriverDir=\uC6D0\uBCF8 JDBC \uB4DC\uB77C\uC774\uBC84 \uC704\uCE58\:
 lblSourceTableName=\uC6D0\uBCF8 \uD14C\uC774\uBE14
 lblSourceTablePartition=\uC6D0\uBCF8 \uD14C\uC774\uBE14 \uD30C\uD2F0\uC158 \uC815\uC758
 lblSourceTalbeName=\uC6D0\uBCF8 \uD14C\uC774\uBE14 \uC774\uB984\:
@@ -438,6 +438,7 @@ lblSynonymObjectName=\uC624\uBE0C\uC81D\uD2B8 \uC774\uB984:
 lblSynonymObjectOwnerName=\uC624\uBE0C\uC81D\uD2B8 \uC2A4\uD0A4\uB9C8 \uC774\uB984\:
 lblTableName=\uD14C\uC774\uBE14 \uC774\uB984\:
 lblTarget=\uB300\uC0C1
+lblTargetJdbcDriverDir=\uB300\uC0C1 JDBC \uB4DC\uB77C\uC774\uBC84 \uC704\uCE58\:
 lblTargetTableName=\uB300\uC0C1 \uD14C\uC774\uBE14 \uC774\uB984\:
 lblTargetTablePartition=\uB300\uC0C1 \uD14C\uC774\uBE14 \uD30C\uD2F0\uC158 \uC815\uC758
 lblTichetCacheFile=Ticket Cache File\:
