--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -406,6 +406,7 @@ lblNULLString=NULL Strings
 lblNonsupport=Nonsupport objects
 lblOtherNULLString=Others\: 
 lblOutputDir=Output directory\:
+lblOutputDirQuestion=Change file repository path(Only local migration can be set up)
 lblOutputFilePrefix=Output File Prefix \:
 lblOverview=Overview
 lblPassword=Password/Passphrase\:
@@ -428,6 +429,7 @@ lblShared=Shared\:
 lblSource=Source
 lblSourceDBPart=Source DB Objects
 lblSourceJdbcDriverDir=Source JDBC driver directory\:
+lblSourceJdbcDriverDirQuestion=Change the JDBC driver setup path used when connecting to the source DB.
 lblSourceTableName=Source Table
 lblSourceTablePartition=Source Table Partition Definition
 lblSourceTalbeName=Source table name\:
@@ -441,6 +443,7 @@ lblSynonymObjectOwnerName=Object Owner Name\:
 lblTableName=Table Name\: 
 lblTarget=Target
 lblTargetJdbcDriverDir=Target JDBC driver directory\:
+lblTargetJdbcDriverDirQuestion=Change the JDBC driver setup path used when connecting to the target DB.(Only online migration can be set up)
 lblTargetTableName=Target table name\:
 lblTargetTablePartition=Target Table Partition Definition
 lblTichetCacheFile=Ticket Cache File\:
