--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -404,6 +404,7 @@ lblNULLString="NULL" \uBB38\uC790\uC5F4
 lblNonsupport=\uBBF8\uC9C0\uC6D0 \uAC1D\uCCB4
 lblOtherNULLString=\uAE30\uD0C0\:
 lblOutputDir=\uCD9C\uB825 \uC704\uCE58\:
+lblOutputDirQuestion=\uCD9C\uB825 \uD30C\uC77C \uACBD\uB85C \uBCC0\uACBD(\uC624\uD504\uB77C\uC778 \uC774\uAD00 \uC2DC \uC124\uC815\uAC00\uB2A5)
 lblOutputFilePrefix=\uCD9C\uB825 \uD30C\uC77C\uC758 Prefix\:
 lblOverview=\uC694\uC57D
 lblPassword=\uBE44\uBC00\uBC88\uD638\:
@@ -426,6 +427,7 @@ lblShared=Shared\:
 lblSource=\uC6D0\uBCF8
 lblSourceDBPart=\uC6D0\uBCF8 DB \uAC1D\uCCB4
 lblSourceJdbcDriverDir=\uC6D0\uBCF8 JDBC \uB4DC\uB77C\uC774\uBC84 \uC704\uCE58\:
+lblSourceJdbcDriverDirQuestion=\uC6D0\uBCF8 DB \uC5F0\uACB0 \uC2DC \uC0AC\uC6A9\uD55C JDBC \uB4DC\uB77C\uC774\uBC84 \uC124\uC815 \uACBD\uB85C\uB97C \uBCC0\uACBD
 lblSourceTableName=\uC6D0\uBCF8 \uD14C\uC774\uBE14
 lblSourceTablePartition=\uC6D0\uBCF8 \uD14C\uC774\uBE14 \uD30C\uD2F0\uC158 \uC815\uC758
 lblSourceTalbeName=\uC6D0\uBCF8 \uD14C\uC774\uBE14 \uC774\uB984\:
@@ -439,6 +441,7 @@ lblSynonymObjectOwnerName=\uC624\uBE0C\uC81D\uD2B8 \uC2A4\uD0A4\uB9C8 \uC774\uB9
 lblTableName=\uD14C\uC774\uBE14 \uC774\uB984\:
 lblTarget=\uB300\uC0C1
 lblTargetJdbcDriverDir=\uB300\uC0C1 JDBC \uB4DC\uB77C\uC774\uBC84 \uC704\uCE58\:
+lblTargetJdbcDriverDirQuestion=\uB300\uC0C1 DB \uC5F0\uACB0 \uC2DC \uC0AC\uC6A9\uD55C JDBC \uB4DC\uB77C\uC774\uBC84 \uC124\uC815 \uACBD\uB85C\uB97C \uBCC0\uACBD(\uC628\uB77C\uC778 \uC774\uAD00 \uC2DC \uC124\uC815\uAC00\uB2A5)
 lblTargetTableName=\uB300\uC0C1 \uD14C\uC774\uBE14 \uC774\uB984\:
 lblTargetTablePartition=\uB300\uC0C1 \uD14C\uC774\uBE14 \uD30C\uD2F0\uC158 \uC815\uC758
 lblTichetCacheFile=Ticket Cache File\:
