--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -352,6 +352,7 @@ lblAuthentication=Authentication\:
 lblAutoIncrement=Auto Increment
 lblCacheNum=Cache Number\:
 lblRenamedObject=Renamed objects
+lblScriptChangeDirectory=Change Directory(Export only available)
 lblChangeTargetTable=Change Target Table
 lblCharset=Charset\: 
 lblClearAll=Clear All Selected
@@ -406,7 +407,8 @@ lblNULLString=NULL Strings
 lblNonsupport=Nonsupport objects
 lblOtherNULLString=Others\: 
 lblOutputDir=Output directory\:
-lblOutputDirQuestion=Change file repository path(Only local migration can be set up)
+lblOutputFileDir=Output file\:
+lblOutputFileDirQuestion=Change file repository path(Only local migration script can be set up)
 lblOutputFilePrefix=Output File Prefix \:
 lblOverview=Overview
 lblPassword=Password/Passphrase\:
@@ -428,7 +430,7 @@ lblSerialName=Serial Name\:
 lblShared=Shared\:
 lblSource=Source
 lblSourceDBPart=Source DB Objects
-lblSourceJdbcDriverDir=Source JDBC driver directory\:
+lblSourceJdbcDriverDir=Source JDBC driver\:
 lblSourceJdbcDriverDirQuestion=Change the JDBC driver setup path used when connecting to the source DB.
 lblSourceTableName=Source Table
 lblSourceTablePartition=Source Table Partition Definition
@@ -442,8 +444,8 @@ lblSynonymObjectName=Object Name\:
 lblSynonymObjectOwnerName=Object Owner Name\:
 lblTableName=Table Name\: 
 lblTarget=Target
-lblTargetJdbcDriverDir=Target JDBC driver directory\:
-lblTargetJdbcDriverDirQuestion=Change the JDBC driver setup path used when connecting to the target DB.(Only online migration can be set up)
+lblTargetJdbcDriverDir=Target JDBC driver\:
+lblTargetJdbcDriverDirQuestion=Change the JDBC driver setup path used when connecting to the target DB.(Only online migration script can be set up)
 lblTargetTableName=Target table name\:
 lblTargetTablePartition=Target Table Partition Definition
 lblTichetCacheFile=Ticket Cache File\:
