--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -97,8 +97,8 @@ btnSettings=Settings...
 btnShowMessages=Show messages area
 btnShowWindowAgain=Do not show this window on your next startup.
 btnSingleThreadImporting=Each file has only one importing thread.
-btnSplitSchema=Split schema file (?)
-btnSplitSchemaQuestion=split schema information by object and generate each file; when unchecked: create all objects in schema file, indexes file
+btnSplitSchema=Split schema file
+btnSplitSchemaQuestion=split schema information by object and generate each file; when unchecked create all objects in schema file, indexes file
 btnSrcCSVFiles=CSV files
 btnSrcCSVFilesDes=Importing CSV files filled with data.
 btnSrcMySQLDumpDB=Local MYSQL XML dump file
